test/npm/es6/openfl/errors/ArgumentErrorTest.js
import ArgumentError from "openfl/errors/ArgumentError";
import * as assert from "assert";


describe ("ES6 | ArgumentError", function () {
	
	
	it ("new", function () {
		
		// TODO: Confirm functionality
		
		var argumentError = new ArgumentError ();
		assert.notEqual (argumentError, null);
		
	});
	
	
});